Fix radio inputs align to center
Add bulletTable class to radio tables. Now input balls are properly aligned to the center

--- a/iRT.html
+++ b/iRT.html
@@ -239,8 +239,8 @@
 
       <!-- Forms: Relações com matérias -->
       <div id="div-form-4" style="display:none">
-        <table class="paddedTable">
-          <tr>
+        <table class="paddedTable bulletTable">
+          <tr >
             <th>Pensando na sua experiência como estudante, classifique <br>
               as disciplinas abaixo quanto ao grau de dificuldade:</th>
             <th>5 <br>Muito<br>Difícil</th>
