Fix rest of unaligned radio inputs

--- a/iRT.html
+++ b/iRT.html
@@ -309,7 +309,7 @@
 
       <!-- Forms: relações com matérias da química -->
       <div id="div-form-5" style="display:none">
-        <table class="paddedTable">
+        <table class="paddedTable bulletTable">
           <tr>
             <th>Pensando na sua experiência como estudante, <br>
               classifique os assuntos abaixo quanto ao grau de dificuldade:</th>
@@ -442,7 +442,7 @@
 
       <!-- Forms: tarefas mat e física -->
       <div id="div-form-6" style="display:none">
-        <table class="paddedTable">
+        <table class="paddedTable bulletTable">
           <tr>
             <th>Pensando na sua experiência como estudante, <br>
               classifique os assuntos abaixo quanto ao grau de dificuldade:</th>
@@ -551,7 +551,7 @@
       
       <!-- Forms: tarefas cotidianas -->
       <div id="div-form-7" style="display:none">
-        <table class="paddedTable">
+        <table class="paddedTable bulletTable">
           <tr>
             <th>Pensando na sua experiência, <br>
                classifique as tarefas abaixo quanto ao grau de dificuldade:</th>
