Fix chem. images alignment

--- a/iRT.html
+++ b/iRT.html
@@ -744,14 +744,14 @@
       <table style="margin:auto;text-align:center;">
         <tr>
           <td colspan="4">
-            <img src="testequimica/headA.jpg" height="50">
-            <img src="testequimica/headB.jpg" height="50">
+            <img src="testequimica/headA.jpg" height="50" width="500">
+            <img src="testequimica/headB.jpg" height="50" width="500">
             <br>
-            <img id="img2DStruct" src="testequimica/structureA1.jpg" height="500">
-            <img id="img3DStruct" src="testequimica/structureA1B1.jpg" height="500">
+            <img id="img2DStruct" src="testequimica/structureA1.jpg" height="500" width="500">
+            <img id="img3DStruct" src="testequimica/structureA1B1.jpg" height="500" width="500">
             <br>
-            <img                  src="testequimica/blankA.jpg" height="50">
-            <img id="img3DLegend" src="testequimica/legendB1.jpg" height="50">
+            <img                  src="testequimica/blankA.jpg" height="50" width="500">
+            <img id="img3DLegend" src="testequimica/legendB1.jpg" height="50" width="500">
           </td>
         </tr>
         <tr>
