Change names for clarity
Change nextChemStructure() to chemStructureNext()
Change structureArray[] to chemStructureArray[]

--- a/iRT.html
+++ b/iRT.html
@@ -804,7 +804,7 @@
             <br>É diferente!
           </label>
         </div>
-        <button type="button" onclick="nextChemStructure()">Próximo</button>
+        <button type="button" onclick="chemStructureNext()">Próximo</button>
       </div>
     </form>
 
