Add array of chemical structures test

--- a/iRT.html
+++ b/iRT.html
@@ -788,19 +788,19 @@
         
         <div class="chem-options-row">
           <label class="chem-option" >
-            <input type="radio" name="p_quim_cert" value="2" >
+            <input type="radio" name="p_chem_structure" value="2" >
             <br>É a mesma!
           </label>
           <label class="chem-option">
-            <input type="radio" name="p_quim_cert" value="1" >
+            <input type="radio" name="p_chem_structure" value="1" >
             <br>Parece ser mesma...
           </label>
           <label class="chem-option">
-            <input type="radio" name="p_quim_cert" value="-1" >
+            <input type="radio" name="p_chem_structure" value="-1" >
             <br>Parece ser diferente...
           </label>
           <label class="chem-option">
-            <input type="radio" name="p_quim_cert" value="-2" >
+            <input type="radio" name="p_chem_structure" value="-2" >
             <br>É diferente!
           </label>
         </div>
