Fix v3 psvtr element alignment

--- a/iRT.html
+++ b/iRT.html
@@ -885,13 +885,13 @@
       <div class="hide-cursor div-psvt-answers" 
       style="background-color: rgba(0,0,255,0) ">
       </div>-->
-    </div> 
+      <!-- paper task end -->
+      <button id="button-psvtr-end" onclick="unremoveById('jspsych-content', 'grid');
+      removeById('button-psvtr-end'); nextStage()" style="visibility:hidden">
+        Próxima etapa
+      </button>
+    </div>
     <br>
-    <!-- end paper task -->
-    <button id="button-psvtr-end" onclick="unremoveById('jspsych-content', 'grid');
-    removeById('button-psvtr-end'); nextStage()">
-      Próxima etapa
-    </button>
 
   </section>
   <!-- corsi block tapping task from jsPsych -->
