Fix corsi test screen position

--- a/iRT.html
+++ b/iRT.html
@@ -891,7 +891,10 @@
 
   </section>
   <!-- corsi block tapping task from jsPsych -->
-  <section id="corsi-task-container" class="ContentStage grid-center" style="display:none"> 
+  <section id="tab_corsi" class="ContentStage grid-center" style="display:none"> 
+    <div id="corsi-task-container" class="grid-center">
+
+    </div>
     <div id='corsi-result' style="display:none">
       <p>Aperte 'Próximo' para prosseguir
       </p>
