--- a/iRT.html
+++ b/iRT.html
@@ -737,7 +737,7 @@
   </section>
   
   <!-- chem.vis. test -->
-  <section id="tab_fim" class="ContentStage" style="display:none; font-size:large">
+  <section id="tab_chem" class="ContentStage" style="display:none; font-size:large">
     <form id="form-chem-test" autocomplete="off" >
       
       <!--images table-->
@@ -970,7 +970,7 @@
   </section>
   
   <!-- final questions -->
-  <section id="tab_fim" class="ContentStage" style="display:none"> <!-- Final words -->
+  <section id="tab_final_question" class="ContentStage" style="display:none"> <!-- Final words -->
     <h1>Últimas perguntas:</h1>
     <form id="endForm" autocomplete="off">
       Em uma escala de 1 a 5, sendo 5 muito difícil e 1 muito fácil,<br>
@@ -1026,7 +1026,7 @@
   </section>
 
   <!-- End of trials: agradecimentos-->
-  <section id="tab_fim" class="ContentStage" style="display:none"> <!-- Final words -->
+  <section id="tab_acknowledgment" class="ContentStage" style="display:none"> <!-- Final words -->
     <p>
       "Muito obrigado por participar da nossa pesquisa!"<br>
       "Thank you for taking part in our research!"<br>
