--- a/iRT.html
+++ b/iRT.html
@@ -738,6 +738,8 @@
   
   <!-- chem.vis. test -->
   <section id="tab_chem" class="ContentStage" style="display:none; font-size:large">
+      <!-- jmol script for images: 
+      frank off; select all; wireframe 0.10; spacefill 20%; select hydrogens; spacefill 15% -->
     <form id="form-chem-test" autocomplete="off" >
       
       <!--images table-->
