Fix corsi boxes space
Change div id
Add display none to corsi div "corsi-task-container"

--- a/iRT.html
+++ b/iRT.html
@@ -895,7 +895,7 @@
     <div id="corsi-task-container" class="grid-center">
 
     </div>
-    <div id='corsi-result' class="grid-center" style="display:none">
+    <div id='div-corsi-end' class="grid-center" style="display:none">
       <p>Aperte 'Próximo' para prosseguir
       </p>
       <button id="endOfCorsiButton"  onclick='nextStage();'>
