Change final dificulty questions
Change number to select (dropdown)

--- a/iRT.html
+++ b/iRT.html
@@ -985,37 +985,64 @@
       <form id="endForm" autocomplete="off">
         <table style="margin:auto">
           <tr>
-            <td colspan="2">
-              Em uma escala de 1 a 5, sendo 5 muito difícil e 1 muito fácil,<br>
-              qual foi a sua dificuldade com os testes?
+            <td colspan="2" style="padding:10px">
+              Na sua opinião, os testes foram difíceis?
             </td>
           </tr>
           <tr>
             <td width="125px" style="padding:0px"><img src="images/icon_chem.png"></img></td>
             <td style="padding:10px">
               Comparar estruturas químicas <br>
-              <input type="number" name="p_dific_chem" min="1" max="5" >
+              <select name="p_dific_chem">
+                <option value="">-- ESCOLHA --</option>
+                <option value="5">Muito difícil</option>
+                <option value="4">Difícil</option>
+                <option value="3">Nem fácil nem difícil</option>
+                <option value="2">Fácil</option>
+                <option value="1">Muito Fácil</option>
+              </select>
             </td>
           </tr>
           <tr>
             <td><img src="images/icon_paper.png"></img></td>
             <td style="padding:10px">
               Rotação mental de blocos <br>
-              <input type="number" name="p_dific_paper" min="1" max="5" >
+              <select name="p_dific_paper">
+                <option value="">-- ESCOLHA --</option>
+                <option value="5">Muito difícil</option>
+                <option value="4">Difícil</option>
+                <option value="3">Nem fácil nem difícil</option>
+                <option value="2">Fácil</option>
+                <option value="1">Muito Fácil</option>
+              </select>
             </td>
           </tr>
           <tr>
             <td><img src="images/icon_corsi.png"></img></td>
             <td style="padding:10px"> 
               Sequência de blocos piscando <br>
-              <input type="number" name="p_dific_corsi" min="1" max="5" >
+              <select name="p_dific_corsi">
+                <option value="">-- ESCOLHA --</option>
+                <option value="5">Muito difícil</option>
+                <option value="4">Difícil</option>
+                <option value="3">Nem fácil nem difícil</option>
+                <option value="2">Fácil</option>
+                <option value="1">Muito Fácil</option>
+              </select>
             </td>
           </tr>
           <tr>
             <td><img src="images/icon_jsmol.png"></img></td>
             <td style="padding:10px"> 
               Rotação interativa de objetos<br>
-              <input type="number" name="p_dific_jsmol" min="1" max="5" >
+              <select name="p_dific_jsmol">
+                <option value="">-- ESCOLHA --</option>
+                <option value="5">Muito difícil</option>
+                <option value="4">Difícil</option>
+                <option value="3">Nem fácil nem difícil</option>
+                <option value="2">Fácil</option>
+                <option value="1">Muito Fácil</option>
+              </select>
             </td>
           </tr>
           <tr>
