BugFix and polish
Página:
Change Final words comment place from final questions to end of trials

Chem.Structures:
Fix Typo: priedades > propriedades
Clarity: remove (...)experiência 'como extudante'

Corsi Intro:
Change sequence length from 2 to 3

PSVTR:
Change Buttons Pronto e Começar to appear in the same spot (avoid problems with "TOC"). (un)hide to (un)remove

--- a/iRT.html
+++ b/iRT.html
@@ -240,7 +240,7 @@
       <div id="div-form-4" style="display:none">
         <table class="paddedTable bulletTable">
           <tr >
-            <th>Pensando na sua experiência como estudante, classifique <br>
+            <th>Pensando na sua experiência, classifique <br>
               as disciplinas abaixo quanto ao grau de dificuldade:</th>
             <th>1<br>Muito<br>Fácil</th>
             <th>2</th>
@@ -310,8 +310,8 @@
       <div id="div-form-5" style="display:none">
         <table class="paddedTable bulletTable">
           <tr>
-            <th>Pensando na sua experiência como estudante, <br>
-              classifique os assuntos abaixo quanto ao grau de dificuldade:</th>
+            <th>Pensando na sua experiência, classifique<br>
+              os assuntos abaixo quanto ao grau de dificuldade:</th>
             <th>1<br>Muito<br>Fácil</th>
             <th>2</th>
             <th>3</th>
@@ -327,7 +327,7 @@
             <td><input type="radio" name="p_dif_q01" value="5"></td>
             <td><input type="radio" name="p_dif_q01" value="0"></td>
           </tr>
-          <tr><td>Grupos funcionais - estrutura e priedades</td>
+          <tr><td>Grupos funcionais - estrutura e propriedades</td>
             <td><input type="radio" name="p_dif_q02" value="1"></td>
             <td><input type="radio" name="p_dif_q02" value="2"></td>
             <td><input type="radio" name="p_dif_q02" value="3"></td>
@@ -443,8 +443,8 @@
       <div id="div-form-6" style="display:none">
         <table class="paddedTable bulletTable">
           <tr>
-            <th>Pensando na sua experiência como estudante, <br>
-              classifique os assuntos abaixo quanto ao grau de dificuldade:</th>
+            <th>Pensando na sua experiência, classifique<br>
+              os assuntos abaixo quanto ao grau de dificuldade:</th>
             <th>1<br>Muito<br>Fácil</th>
             <th>2</th>
             <th>3</th>
@@ -552,8 +552,8 @@
       <div id="div-form-7" style="display:none">
         <table class="paddedTable bulletTable">
           <tr>
-            <th>Pensando na sua experiência, <br>
-               classifique as tarefas abaixo quanto ao grau de dificuldade:</th>
+            <th>Pensando na sua experiência, classifique <br>
+              as tarefas abaixo quanto ao grau de dificuldade:</th>
             <th>1<br>Muito<br>Fácil</th>
             <th>2</th>
             <th>3</th>
@@ -979,7 +979,6 @@
   
   <!-- final questions -->
   <section id="tab_final_question" class="ContentStage" style="display:none"> 
-    <!-- Final words -->
     <div class="grid-center">
       <h1>Últimas perguntas:</h1>
       <form id="endForm" autocomplete="off">
@@ -1078,6 +1077,7 @@
 
   <!-- End of trials: agradecimentos-->
   <section id="tab_acknowledgment" class="ContentStage" style="display:none"> <!-- Final words -->
+    <!-- Final words -->
     <div class="grid-center">
       <p>
         "Muito obrigado por participar da nossa pesquisa!"<br>
